--- a/Language cep/src/main/languagecep/Visual/html/MainPage/MainPage.html
+++ b/Language cep/src/main/languagecep/Visual/html/MainPage/MainPage.html
@@ -6,9 +6,68 @@
 
         <script src="../../../../../../lib/CSInterface-4.0.0.js"></script>
         <script src="../../../Controller/javascript/ext.js"></script>
-        <script src="../../../Controller/javascript/MainControllers/MainPage.js"></script> 
+
+        <!-- Здесь можно добавить стили для диалога, если нужно -->
+        <style>
+            #customFolderDialog {
+                display: none;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                padding: 20px;
+                background-color: white;
+                border: 1px solid #ccc;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+                z-index: 1000;
+            }
+            #customFolderDialog button {
+                margin-top: 10px;
+            }
+        </style>
     </head>
     <body>
-        <button id="greetButton">Start renderr</button>
+        <!-- Кнопка для запуска основного процесса -->
+        <button onclick="openCustomDialog()">Start renderr</button>
+
+        <!-- Ваш кастомный диалог выбора папки -->
+        <div id="customFolderDialog">
+            <p>Select a folder:</p>
+            <input type="file" id="folderInput" webkitdirectory directory multiple />
+            <button id="greetButton" >OK</button>
+            <button onclick="closeDialog()">Cancel</button>
+        </div>
+
+        <script src="../../../Controller/javascript/MainControllers/MainPage.js"></script> 
+
+        <script>
+            // Открытие диалога
+
+            const fs = require('fs');
+            const path = require('path');
+
+            function openCustomDialog() {
+                document.getElementById('customFolderDialog').style.display = 'block';
+            }
+
+            // Закрытие диалога
+            function closeDialog() {
+                document.getElementById('customFolderDialog').style.display = 'none';
+            }
+
+            // Подтверждение выбора папки
+            function confirmFolderSelection() {
+                const folderInput = document.getElementById('folderInput');
+                if (folderInput.files.length > 0) {
+                    const sourceFolderPath = path.dirname(folderInput.files[0].path);
+                    const folderPath = folderInput.files[0].webkitRelativePath.split("/")[0];
+                    console.log("Selected folder: " + sourceFolderPath);
+                    closeDialog();
+                    // Обработка выбранной папки
+                } else {
+                    console.log("No folder selected.");
+                }
+            }
+        </script>
     </body>
 </html>
