--- a/Language cep/src/main/languagecep/Visual/html/MainPage/MainPage.html
+++ b/Language cep/src/main/languagecep/Visual/html/MainPage/MainPage.html
@@ -33,7 +33,7 @@
         <!-- Ваш кастомный диалог выбора папки -->
         <div id="customFolderDialog">
             <p>Select a folder:</p>
-            <input type="file" id="folderInput" webkitdirectory directory multiple />
+            <input type="file" id="folderInput" webkitdirectory directory/>
             <button id="greetButton" >OK</button>
             <button onclick="closeDialog()">Cancel</button>
         </div>
